@@ -126,6 +126,9 @@ ctags-exuberant|Exuberant Ctags|ctags by Darren Hiebert:\
 # Configuration for htags(1)
 # Let's paint hypertext with your favorite colors!
 #
+# htags_options:
+#	default options. If you want to invoke htags with '-v -a'
+#	then write ':htags_options=-v -a:...'.
 # body_begin,body_end:
 #	body tag
 # title_begin,title_end:
